sửa xong thống kê mô tả

--- a/content/2_Co_so_ly_thuyet.tex
+++ b/content/2_Co_so_ly_thuyet.tex
@@ -41,6 +41,8 @@ Trong đó:
 \subsubsection{Hồi quy tuyến tính đa bội}
 Hồi quy tuyến tính đa biến là một phương pháp thống kê được sử dụng để mô hình hóa mối quan hệ giữa một biến phụ thuộc (hay còn gọi là biến mục tiêu) và một hoặc nhiều biến độc lập (biến giải thích). Mục tiêu của hồi quy tuyến tính đa biến là dự đoán giá trị của biến phụ thuộc dựa trên các giá trị của các biến độc lập.
 
+\pagebreak
+
 Mô hình hồi quy tuyến tính đa biến có dạng:
 
 \[
