--- a/hcmut_report.cls
+++ b/hcmut_report.cls
@@ -37,6 +37,7 @@
 \RequirePackage{adjustbox}
 \RequirePackage{array}
 \RequirePackage{tcolorbox}
+\RequirePackage{placeins}
 
 % Some packages that seem pretty redundant
 \RequirePackage{geometry,graphicx,indentfirst,setspace}
