sửa xong anova2

--- a/content/5_Thong_ke_suy_dien/1_ANOVA_mot_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/1_ANOVA_mot_nhan_to.tex
@@ -1,4 +1,4 @@
-\subsection{Phân tích phương sai một nhân tố (Single-factor ANOVA)}
+\subsection{Phân tích phương sai một nhân tố (Single-factor ANOVA)} \label{anova1}
 Mục tiêu: Đánh giá xem biến nhân tố X có ảnh hưởng đến biến phụ thuộc Y hay không?
 %mùa ảnh hưởng tới phí giao hàng
 Chúng em quyết định sẽ kiểm định xem, việc các mùa (season) sẽ ảnh hưởng như thế nào đến phí giao hàng (delivery\_charges) bằng
