--- a/content/7_Nguon_du_lieu_nguon_code.tex
+++ b/content/7_Nguon_du_lieu_nguon_code.tex
@@ -1,1 +1,5 @@
+\pagebreak
 \section{Nguồn dữ liệu và nguồn code}
+Nguồn dữ liệu (dirty\_data.csv): \href{https://www.kaggle.com/datasets/muhammadshahrayar/transactional-retail-dataset-of-electronics-store?select=dirty_data.csv}{DATA}
+
+Nguồn code R (link GG Drive): \href{https://drive.google.com/file/d/1jPlhtnxNBngjCb4IFFCHKuo0sPSkHAlP/view?usp=drive_link}{CODE}
