Sửa lại bảng phân công

--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
             \hline
             \textbf{STT} & \textbf{Họ và tên}         & \textbf{MSSV}   & \textbf{Nhiệm vụ}                             & \textbf{Đóng góp} & \textbf{Điểm chia $\pm 2$} \\ \hline
             1            & Trần Điền Minh            & 2312116         & Hồi quy đa bội                                 & 100 \% & 0 \\ \hline
-            2            & Phan Thanh Sơn            & 2312975         & \makecell[l]{Kiểm định hai mẫu \\ \& một mẫu}  & 100 \% & 0 \\ \hline
+            2            & Phan Thanh Sơn            & 2312975         & Hồi quy đa bội                                 & 100 \% & 0 \\ \hline
             3            & Nguyễn Hoàng Anh Thắng    & 2313185         & Anova hai nhân tố                              & 100 \% & 0 \\ \hline
             4            & Huỳnh Văn Lợi             & 2311974         & Anova một nhân tố                              & 100 \% & 0 \\ \hline
             5            & Cao Chí Nguyên            & 2312331         & Thực hiện thống kê mô tả                       & 100 \% & 0 \\ \hline
