--- a/content/4_Thong_ke_mo_ta.tex
+++ b/content/4_Thong_ke_mo_ta.tex
@@ -49,7 +49,7 @@ Ta so sánh  lần lượt từng order\_price, delivery\_charges, coupon\_disco
 
 \textbf{Nhận xét:} Hai biến order\_price và coupon\_discount là 2 biến có ảnh hưởng tới order\_total hay còn gọi là có quan hệ tuyến tính. Hai biến delivery\_charges và distance\_to\_nearest\_warehouse không có ảnh hưởng tới order\_total hay không có quan hệ tuyến tính.
 
-\subsubsection{Phân tích biến định tính bằng biểu đồ boxplot}
+\subsubsection{Phân tích biến phân loại bằng biểu đồ boxplot}
 Ta phân tích biến order\_total theo các biến nearest\_warehouse, season, is\_expedited\_delivery, is\_happy\_customer.
 \begin{figure}[!htbp]
     \centering
@@ -68,7 +68,7 @@ Ta phân tích biến order\_total theo các biến nearest\_warehouse, season, 
 Bảng đánh giá tương quan trong đồ thị trên được sử dụng để hiểu rõ mối quan hệ giữa các biến số trong tập dữ liệu.
 \pagebreak
 \begin{figure}[!htbp]
-    \centering
+       \centering
     \includegraphics[width=1\linewidth]{graphics/bang14.jpg}
     \caption{Biểu đồ boxplot đã xóa ngoại lai của các biến phân loại}
     \label{fig:4.8}
