--- a/content/1_Tong_quan_du_lieu.tex
+++ b/content/1_Tong_quan_du_lieu.tex
@@ -1,6 +1,6 @@
 \section{Tổng quan dữ liệu}
 \subsection{Mô tả dữ liệu}
-Tập dữ liệu được cung cấp trong BTL chứa thông tin về một cửa hàng điện tử trực tuyến. Cửa hàng có ba kho hàng hóa để giao hàng cho khách hàng. Dựa vào dữ liệu đã cho để tìm mối quan hệ giữa các biến, từ đó đưa ra phỏng đoán và xây dựng mô hình dự báo mức độ hài lòng của khách hàng.
+Tập dữ liệu được cung cấp trong BTL chứa thông tin về một cửa hàng điện tử trực tuyến. Cửa hàng có ba kho hàng hóa để giao hàng cho khách hàng. Dựa vào dữ liệu đã cho để tìm mối quan hệ giữa các biến, từ đó xây dựng mô hình giúp hiểu rõ những yếu tố ảnh hưởng đến giá trị của tổng đơn hàng.
 
 \begin{itemize}
     \item Tiêu đề: Transactional Retail Dataset of Electronics Store
