--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 
 \coursename{XÁC SUẤT VÀ THỐNG KÊ}
 \reporttype{BÁO CÁO BÀI TẬP LỚN}
-\title{PHÂN TÍCH BỘ DỮ LIỆU VỀ SẢN PHẨM CỦA CỬA HÀNG ĐIỆN TỬ TRỰC TUYẾN}
+\title{PHÂN TÍCH GIÁ TRỊ TỔNG ĐƠN HÀNG Ở MỘT CỬA HÀNG ĐIỆN TỬ}
 \advisor{
     TS. Phan Thị Hường
 }
