Sửa "Tiền xử lý số liệu"

--- a/content/5_Thong_ke_suy_dien/3_Hoi_quy_tuyen_tinh_da_bien.tex
+++ b/content/5_Thong_ke_suy_dien/3_Hoi_quy_tuyen_tinh_da_bien.tex
@@ -93,7 +93,9 @@ Với mức ý nghĩa 5\%, ta phân tích phần Coeficients(hệ số) như sau
 
 Định nghĩa các biến:  y: order\_total, $x_1$: order\_price, $x_2$: delivery\_charges, $x_3$: coupon\_discount, $x_4$: distance\_to\_nearest\_warehouse.
 
-Cho các hệ số của từng biến độc lập trong phương trình : $\beta_0= 1521, \beta_1= 0.8889, \\\beta_2= 0.3198, \beta_3= -133.3, \beta_4= 80.21$ Ta có phương trình hồi quy: 
+Cho các hệ số của từng biến độc lập trong phương trình : $\beta_0= 1521, \beta_1= 0.8889, \\\beta_2= 0.3198, \beta_3= -133.3, \beta_4= 80.21$ 
+
+Ta có phương trình hồi quy: 
 
  \hspace{25mm}$y= 1450 + 0.8889x_1 + 0.3198x_2 - 133.3x_3 + 80.21x_4$
 
