--- a/main.tex
+++ b/main.tex
@@ -40,8 +40,8 @@
             2            & Phan Thanh Sơn            & 2312975         & Hồi quy đa bội                                 & 100 \% & 0 \\ \hline
             3            & Nguyễn Hoàng Anh Thắng    & 2313185         & Anova hai nhân tố                              & 100 \% & 0 \\ \hline
             4            & Huỳnh Văn Lợi             & 2311974         & Anova một nhân tố                              & 100 \% & 0 \\ \hline
-            5            & Cao Chí Nguyên            & 2312331         & Thực hiện thống kê mô tả                       & 100 \% & 0 \\ \hline
-            6            & Nguyễn Hữu Thịnh          & 2313292         & Thực hiện tiền xử lí số liệu                   & 100 \% & 0 \\ \hline
+            5            & Cao Chí Nguyên            & 2312331         & Thống kê mô tả                       & 100 \% & 0 \\ \hline
+            6            & Nguyễn Hữu Thịnh          & 2313292         & Tiền xử lí số liệu                   & 100 \% & 0 \\ \hline
         \end{tabular}
         }        
     \end{table}
