sửa tên tiếng anh

--- a/content/5_Thong_ke_suy_dien/1_ANOVA_mot_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/1_ANOVA_mot_nhan_to.tex
@@ -1,4 +1,4 @@
-\subsection{Phân tích phương sai một nhân tố (Single-factor ANOVA)} \label{anova1}
+\subsection{Phân tích phương sai một nhân tố (One-way ANOVA)} \label{anova1}
 \subsubsection{Mục đích}
 Đánh giá xem biến nhân tố X có ảnh hưởng đến biến phụ thuộc Y hay không? Chúng em quyết định sẽ kiểm định xem, việc các mùa (season) cũng như hình thức giao hàng nhanh (is\_expedited\_delivery) sẽ ảnh hưởng như thế nào đến phí giao hàng (delivery\_charges) bằng phương pháp phân tích phương sai ANOVA một nhân tố.
 \subsubsection{Tiến hành phân tích}
