--- a/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
@@ -1,5 +1,5 @@
 
-\subsection{Phân tích phương sai hai nhân tố (Two-factor ANOVA)}
+\subsection{Phân tích phương sai hai nhân tố (Two-way ANOVA)}
 \subsubsection{Mục đích}
 Trong phần nghiên cứu này, chúng tôi sẽ sử dụng ANOVA 2 yếu tố không lặp để phân tích xem liệu \textbf{Được giao hàng nhanh (is\_expedited\_delivery)} và \textbf{Mùa (season)} có ảnh hưởng đến \textbf{Phí giao hàng (delivery\_charges)} hay không?
 
