--- a/content/2_Co_so_ly_thuyet.tex
+++ b/content/2_Co_so_ly_thuyet.tex
@@ -21,7 +21,7 @@ d = R \cdot c
 \subsection{Thống kê mô tả}
 Phương pháp thống kê mô tả (descriptive statistics) là một phương pháp trong khoa học thống kê được sử dụng để mô tả và tóm tắt các dữ liệu một cách đơn giản và dễ hiểu. Phương pháp này giúp chúng ta hiểu thông tin cơ bản về các biến trong dữ liệu mà không cần đưa ra các phán đoán hay suy luận về mối quan hệ giữa các biến. Các phương pháp thống kê mô tả thường bao gồm các đại lượng thống kê như \textbf{giá trị trung bình, phương sai, độ lệch chuẩn, phân vị, tỉ lệ phần trăm, đồ thị và biểu đồ}. Các đại lượng này giúp chúng ta hiểu về trung tâm, phân tán và hình dạng của dữ liệu.
 \subsection{Thống kê suy diễn}
-Trong bài tập lớn này, nhóm có vận dụng những kiến thức được học trên lớp như xây dựng khoảng tin cậy, kiểm định giả thuyết, định lý giới hạn trung tâm, v.v... Vì thế nhóm sẽ không trình bày lại trong phần này. Thay vào đó, nhóm sẽ tập trung giới thiệu những kiến thức mới mà nhóm tự tìm tòi.
+Trong bài tập lớn này, chúng ta có vận dụng những kiến thức được học trên lớp như xây dựng khoảng tin cậy, kiểm định giả thuyết, định lý giới hạn trung tâm, v.v... Vì thế những nội dung này sẽ không được trình bày lại trong phần này. Thay vào đó, những kiến thức mới sẽ được giới thiệu để phục vụ cho việc phân tích dữ liệu.
 \subsubsection{Phân tích phương sai 2 nhân tố}
 Phân tích phương sai 2 nhân tố (Two-Way ANOVA) là một phương pháp thống kê được sử dụng để kiểm tra sự ảnh hưởng của hai yếu tố (hay còn gọi là biến độc lập) đến một biến phụ thuộc (biến kết quả), cũng như mối quan hệ tương tác giữa chúng.
 
@@ -40,8 +40,6 @@ Trong đó:
 \end{itemize}
 \subsubsection{Hồi quy tuyến tính đa bội}
 Hồi quy tuyến tính đa biến là một phương pháp thống kê được sử dụng để mô hình hóa mối quan hệ giữa một biến phụ thuộc (hay còn gọi là biến mục tiêu) và một hoặc nhiều biến độc lập (biến giải thích). Mục tiêu của hồi quy tuyến tính đa biến là dự đoán giá trị của biến phụ thuộc dựa trên các giá trị của các biến độc lập.
-
-\pagebreak
 
 Mô hình hồi quy tuyến tính đa biến có dạng:
 
